--- a/src/content/index.html
+++ b/src/content/index.html
@@ -57,8 +57,9 @@
             <thead class="table-dark">
               <tr>
                 <th class="col-lg-4">Name</th>
-                <th class="col-lg-2">Size</th>
+                <th class="col-lg-2">Size (KB)</th>
                 <th class="col-lg-2">Last Modified</th>
+                <th class="col-lg-2">#</th>
               </tr>
             </thead>
             <tbody id="table_content"></tbody>
