--- a/src/content/index.html
+++ b/src/content/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/loader.css" rel="stylesheet" />
 
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -53,6 +54,16 @@
                 <button type="button" class="btn btn-primary search_button">
                   <i class="fas fa-search"></i>
                 </button>
+              </div>
+              <div class="form-check form-switch pt-4 mx-auto">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="search_type"
+                />
+                <label class="form-check-label" for="search_type"
+                  >Advance Search</label
+                >
               </div>
             </div>
           </section>
