--- a/src/content/index.html
+++ b/src/content/index.html
@@ -62,7 +62,7 @@
                   id="search_type"
                 />
                 <label class="form-check-label" for="search_type"
-                  >Advance Search</label
+                  >Advance Search.</label
                 >
               </div>
             </div>
